# GraphicsLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  cmake-single-platform.yml
cmake/: GraphicsLabConfig.cmake.in  clang-format.cmake  fetch-argparse.cmake  fetch-assimp.cmake  fetch-boost.cmake  fetch-boost_di.cmake  fetch-cdt.cmake  fetch-cpptrace.cmake  fetch-fruit.cmake  fetch-glm.cmake  fetch-imgui_node_editor.cmake  fetch-lua.cmake  fetch-reflect_cpp.cmake  fetch-sol2.cmake  fetch-tinycolormap.cmake  fetch-vma.cmake  fetch-xtensor.cmake
configs/: imgui.ini
docs/: intersector_missing_summary.md
include/demo/utils/: controller.hpp
include/geometry/: geometry.hpp  renderable_geometry.hpp
include/geometry/autodiff/: autodiff.hpp
include/geometry/boundary_representation/: brep_definition.hpp  geometry_defintition.hpp  topology_definition.hpp
include/geometry/box/: box.hpp
include/geometry/computational_geometry/: convex_hull.hpp
include/geometry/constructor/: box3d.hpp  constructor_concept.hpp  constructors.hpp  directional_field_constructor.hpp  explicit_surface_constructors.hpp  random_point_cloud.hpp  (+2 more)
include/graphics_lab/: application.hpp  graphics_lab_context.hpp  graphics_lab_controller.hpp  graphics_lab_imgui_component.hpp  project.hpp
include/lua/: lua_binding.hpp  scene_binding.hpp
include/numeric/: polynomials.hpp
include/platform/: file_system.hpp
include/reflection/: builtin_reflectors.hpp  custom_reflector_template.hpp  reflectors.hpp
include/utils/: graph.hpp  sampler.hpp
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
projects/: CMakeLists.txt
scripts/: clang-formatter.py  init_toolchain.bat
shader/: 2d_texture_shader.frag  3d_aabb_box.frag  3d_world_axis.frag  auto_smooth_shader.frag  auto_smooth_shader.geom  deferred_shading_normal.frag  deferred_shading_position.frag  directional_field_3d.geom  directional_field_3d.vert  normal_generation.geom  path_tracing_compute_shader.comp  point_cloud_3d_shader.vert  rectangle.geom  shade_flat_shader.geom  simple_color_shader.frag  simple_shader.frag  simple_shader_2d.vert
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/bezier_generator/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  random_curve_generator.hpp  scene.hpp
src/applications/bezier_generator/shader/: CMakeLists.txt  curve2D.vert
src/applications/delaunay_demo/: CMakeLists.txt  hyperbolic_disk_render_pass.hpp  hyperbolic_geometry.hpp  hyperbolic_tessellation.hpp  main.cpp  mobius_transformation.hpp  project.cpp  project.hpp
src/applications/delaunay_demo/render_system/: poincare_disk_point_cloud_render_system.hpp  poincare_disk_render_system.hpp
src/applications/delaunay_demo/shader/: CMakeLists.txt  mobius_trans_shader.vert
src/applications/delaunay_demo/ui/: custom_controller.hpp  uistate.hpp
src/applications/project_demo/: CMakeLists.txt  explicit_surface_examples.cpp  explicit_surface_examples.hpp  main.cpp  visualization.hpp
src/bezier_curve/: CMakeLists.txt
src/demo/: CMakeLists.txt  application.cpp  application.hpp
src/geometry/: CMakeLists.txt
src/geometry/boundary_representation/faceter/: cdt_faceter.cpp
src/geometry/curve/: bezier_clipping.cpp  bezier_curve_2d.cpp  bezier_root_finder.cpp
src/geometry/parametric/: tessellator.cpp
src/geometry_processing/: CMakeLists.txt  laplacian_boundary_z_axis_valued.cpp  normal_vector.cpp
src/lua/: CMakeLists.txt  lua_binding.cpp  main.cpp  scene_binding.cpp
src/main/: CMakeLists.txt  application.cpp  application.hpp  application_experimental.cpp  application_experimental.hpp  main.cpp
src/main/configs/: imgui.ini
src/main/controller/: controller.hpp  ui_states.hpp
src/main/project/: file_system.cpp  file_system.hpp  project_manager.cpp  project_manager.hpp
src/main/project/platform/: file_system_unix.cpp  file_system_windows.cpp  project_manager_unix.cpp  project_manager_windows.cpp
src/main/render/: render_manager.hpp
src/main/render/internal_render_pass/: 2d_scene_internal_pass.hpp  3d_scene_internal_pass.hpp  internal_imgui_pass.hpp
src/main/render/internal_render_pass/utils/: imgui_utils.hpp
src/main/render/passes/: 3d_scene_pass.hpp  imgui_pass.hpp  project_render_pass.hpp  render_pass_base.hpp  render_pass_register.hpp
src/main/storage/: recent_models.hpp
src/main/ui/: render_resources.hpp  ui_manager.hpp
src/main/ui/components/: component.hpp  component_register.hpp  constructor_widget.hpp  dummy_component.hpp  import_model.hpp  logger_widget.hpp  material_manager.hpp  node_editor_widget.hpp  project_render_widgets.hpp  project_widgets.hpp  python_scripts_explorer.hpp  python_terminal.hpp  render_mode_panel.hpp  scene_tree.hpp  scene_widgets.hpp  texture_manager.hpp
src/numeric/: CMakeLists.txt  polynomial_solver.cpp
src/particle/: CMakeLists.txt  application.hpp
src/platform/: CMakeLists.txt  file_system.cpp
src/ray_tracer/: CMakeLists.txt
src/rendergraph_demo/: CMakeLists.txt  application.cpp  application.hpp
src/simulation/: CMakeLists.txt
src/simulation_example/: CMakeLists.txt
src/vkl/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/coroutine/: generator.cpp
test/crtp/: crtp_test.cpp
test/geometry/: brep_constructor_test.cpp  brep_curve_surface_intersector_test.cpp  brep_face_test.cpp  explicit_surface_test.cpp  explicit_torus_intersector_test.cpp  line_param_2d_intersector.cpp  nurbs_curve_test.cpp  nurbs_surface_test.cpp  parametric_curve_primitives_test.cpp  parametric_surface_primitives_test.cpp  rational_curves_test.cpp  spatial_datastructure_test.cpp  tensor_product_bezier_test.cpp
test/geometry/function/: bezier2d_evaluate.cpp
test/geometry/intersector/: csi_intersector_table_test.cpp  intersector_test_common.hpp  ppi_intersector_table_test.cpp  ssi_intersector_table_test.cpp
test/numeric/: polynomial_solver_test.cpp  polynomial_test.cpp
test/parallel/: thread_pool_test.cpp
test/reflection/: dynamic_reflector_test.cpp  static_reflector_test.cpp
test/templates/: meta_programming_test.cpp
(+279 files in other folders)
